# py-alpine-poetry-script-template

./: Dockerfile  Dockerfile-old  README.md  pyproject.toml
